force-app/main/default/objects/Product__c/fields/Drug_Type__c.field-meta.xml
<CustomField>
    <fullName>Drug_Type__c</fullName>
    <description>Type of drug formulation</description>
    <label>Drug Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Injection</fullName>
            </value>
            <value>
                <fullName>Syrup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>