force-app/main/default/objects/Product__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Product expiry date</description>
    <label>Expiry Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>