force-app/main/default/objects/Product__c/recordTypes/Prescription.recordType-meta.xml
<RecordType>
    <fullName>Prescription</fullName>
    <active>true</active>
    <label>Prescription</label>
</RecordType>