force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Product_Code__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Drug_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>